# routes/emailRoutes.js
@@ -1,6 +1,13 @@
 const express = require('express');
 const nodemailer = require('nodemailer');
 const router = express.Router();
+const { handleRecord } = require('../helpers/RecordHandler.js');
+const { OperationEnums } = require('../helpers/utilityEnum.js');
+const exeQuery = require('../helpers/exeQuery');
+
+
+router.use(express.json());
+
 
 // Nodemailer transporter configuration
 const transporter = nodemailer.createTransport({
@@ -9,6 +16,27 @@ const transporter = nodemailer.createTransport({
         user: 'yaswanthpg9@gmail.com', 
         pass: 'bigmixvfocxidpme'       // Your App Password
     }
+});
+
+/*
+router.post('/SignIn', async (req, res) => {
+    try {
+        const data = req.body;
+        handleRecord(req, res, data, OperationEnums().SIGNIN);
+    } catch (error) {
+        console.error('Error:', error.message);
+        res.status(500).json({ error: 'Error updating Users' });
+    }
+});*/
+
+router.get('/SignIn', (req, res) => {
+try {
+    const data = req.query;
+    handleRecord(req, res, data, OperationEnums().SIGNIN);
+} catch (error) {
+    console.error('Error:', error.message);
+    res.status(500).json({ error: 'Error While SIGNIN' });
+}
 });
 
 // Email Service
@@ -31,15 +59,43 @@ router.post('/send-email', async (req, res) => {
     } catch (error) {
         console.error('Error while sending email:', error);
         res.status(500).json({ message: 'Error while sending email', error: error.message });
-   }
+    }
 });
 
-module.exports = router;
+//#region ManageRequestPass
+router.post('/ManageRequestPass', async (req, res) => {
+    try {
+    
+        if (!req.body || !req.body.orgid || !req.body.userid || !req.body.Operation || !req.body.RequestPass || !req.body.Attendees) {
+            return res.status(400).send({ error: 'Missing required parameters' });
+        }
 
+        exeQuery.SpManageRequestPass(req.body, (error, results) => {
+            if (error) {
+                res.status(400).send({ error: error.message });
+                return;
+            }
 
-// Base route for testing the API
-router.get('/', (req, res) => {
-    res.status(200).json({ message: ' service is running' });
+            res.status(200).send(results);
+        });
+    } catch (error) {
+        res.status(400).send({ error: error.message });
+    }
 });
+
+
+
+
+router.get('/getReqPass', (req, res) => {
+    const data = req.query; 
+    handleRecord(req, res, data, OperationEnums().GETREQPASS);
+});
+
+router.get('/getReqPassById', (req, res) => {
+    const data = req.query; 
+    handleRecord(req, res, data, OperationEnums().GETREQPASSBYID);
+});
+//#endregion ManageRequestPass
+
 
 module.exports = router;
